# gam-multi

./: README.md  main.py  pyproject.toml
src/gam_mcp/: __init__.py  server.py
